# sprout

./: .gitignore  DEPLOY.md  Procfile  dev.sh  nixpacks.toml  pyproject.toml  railway.json
api/: backup.py  config.py  greeting.py  main.py  serialize.py  state.py  validation.py
api/routers/: dashboard.py  entries.py  lab.py  stock.py  watchlist.py
app/: config.py  main.py  state.py
app/assets/: app.css  cards.css  cards.js
app/components/cards/: allocation_panel.py  card.py  card_hand.py  chart_card.py  kpi_card.py  progress_card.py  table_card.py
app/components/layout/: page_shell.py  sidebar.py  widget_grid.py
app/pages/: dashboard.py  investments.py  trades.py
csv_data_archive/: trades.example.csv
data/: transactions.example.csv
notebooks/: lab.ipynb  lab1.ipynb  lab2.ipynb  portfolio.db  trades.csv
scripts/: backfill_trade_prices.py
src/portfolio/: pipeline.py
src/portfolio/analytics/: cards.py  cash.py  cost_basis.py  dividends.py  positions.py  realized.py  returns.py  risk.py  timeseries.py
src/portfolio/data/: db.py  loader.py  prices.py  store.py  writer.py
src/portfolio/viz/: figures.py
web/: package-lock.json  package.json  svelte.config.js  verify.mjs  vite.config.js
web/src/: app.css  app.html
web/src/lib/: api.js  charts.js  format.js  isMobile.js  mockStock.js  plotly.js  stores.js  theme.js  tickerColor.js
web/src/lib/components/: ActivityLog.svelte  AllocationPanel.svelte  AllocationRing.svelte  BalanceCard.svelte  (+27 more)
web/src/routes/: +layout.js  +layout.svelte  +page.svelte
web/static/: Plants.vox  manifest.webmanifest
(+18 files in other folders)
